--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/jconeff/food-festival#readme",
   "devDependencies": {
     "file-loader": "^6.2.0",
+    "image-webpack-loader": "^7.0.1",
     "webpack": "^5.24.4",
     "webpack-bundle-analyzer": "^4.4.0",
     "webpack-cli": "^4.5.0"
